--- a/cordel.css
+++ b/cordel.css
@@ -1,2 +1,56 @@
 @charset "UTF-8";
+*{
+    margin: 0px;
+    padding: 0px;
+}
+html,body{ 
+    min-height: 100%;
+    background-color: darkgrey;
+}
+header{
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+header > h1{
+    padding-top: 50px;
+    font-variant: small-caps;
+}
+header > p{
+    padding-bottom: 50px;
+}
+a{
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+a:hover{
+    text-decoration: underline;
+}
+section{
+    padding-top: 10%;
+    padding-bottom: 10%;
+    line-height: 2em;
+    padding-left: 30px;
+}
+section.normal{
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+section.imagem{
+    background-color: rgb(41, 41, 41);
+    color:white;
+}
+section.imagem > p{
+ background-color: rgba(0, 0, 0, 0.26);   
+ padding: 10px;
+ width: 400px;
+}
 
+
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
