--- a/cordel.css
+++ b/cordel.css
@@ -1,4 +1,17 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root{
+    --font1:verdana, geneva, tahoma, sans-serif
+    --fonte2: 
+    --fonte3: 
+}
+
+
 *{
     margin: 0px;
     padding: 0px;
@@ -45,6 +58,7 @@ section.imagem > p{
  background-color: rgba(0, 0, 0, 0.26);   
  padding: 10px;
  width: 400px;
+
 }
 
 
