--- a/cordel.css
+++ b/cordel.css
@@ -1,14 +1,15 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Sofadi+One&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+
 
 :root{
-    --font1:verdana, geneva, tahoma, sans-serif
-    --fonte2: 
-    --fonte3: 
+    --fonte1:verdana, geneva, tahoma, sans-serif;
+    --fonte2: "Sofadi One", system-ui;
+    --fonte3: "Abel", sans-serif;
 }
 
 
@@ -19,6 +20,8 @@
 html,body{ 
     min-height: 100%;
     background-color: darkgrey;
+    font-family: var(--fonte1);
+    font-size: 1em;
 }
 header{
     background-color: black;
@@ -28,6 +31,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 5vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -45,6 +50,8 @@ section{
     padding-bottom: 10%;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 section.normal{
     background-color: rgb(255, 255, 255);
@@ -57,7 +64,7 @@ section.imagem{
 section.imagem > p{
  background-color: rgba(0, 0, 0, 0.26);   
  padding: 10px;
- width: 400px;
+ display:inline-block;
 
 }
 
