--- a/cordel.css
+++ b/cordel.css
@@ -59,14 +59,27 @@ section.normal{
 section.imagem{
     background-color: rgb(41, 41, 41);
     color:white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.507);
+    background-attachment: fixed;
+}
+section#img1{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover
+}
+section#img2{
+    background-image: url(imagens/background002.jpg);
+    background-size: cover
 }
 section.imagem > p{
- background-color: rgba(0, 0, 0, 0.26);   
+ background-color: rgba(0, 0, 0, 0.589);   
  padding: 10px;
  display:inline-block;
-
+ text-shadow: 2px 2px 0px black ;
 }
-
+section > p{
+    padding-bottom: 2em ;
+}
 
 footer{
     background-color: black;
